fix(styles): aligned padding-inline with the design

--- a/packages/components/src/components/post-language-option/post-language-option.scss
+++ b/packages/components/src/components/post-language-option/post-language-option.scss
@@ -56,8 +56,7 @@ post-language-option {
 
     :is(a, button) {
       padding-block: 13px;
-      padding-inline-start: 16px;
-      padding-inline-end: 32px;
+      padding-inline: 16px;
       box-sizing: border-box;
       position: relative;
       width: 100%;
